[package]
name = "wry_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
dirs = "5.0.1"
tao = "0.25.0"
tokio = { version = "1.36.0", features = ["rt", "sync"] }
tower-http = { version = "0.5.1", features = ["fs"] }
wry = "0.36.0"
